--- a/web/themes/contrib/civictheme_base/components/03-organisms/alert/alert.twig
+++ b/web/themes/contrib/civictheme_base/components/03-organisms/alert/alert.twig
@@ -52,7 +52,7 @@
 
         <div class="ct-alert__summary col-xxs-12 col-m-9">
           {{ description|raw }}
-          {% include "@atoms/button/button.twig" with {
+          {% include "civictheme_base:button" with {
             kind: 'button',
             theme: theme,
             type: 'tertiary',
