--- a/web/themes/contrib/civictheme_base/components/03-organisms/promo/promo.twig
+++ b/web/themes/contrib/civictheme_base/components/03-organisms/promo/promo.twig
@@ -44,7 +44,7 @@
                 {% endif %}
               {% endblock %}
 
-              {% block content %}
+              {% block content_main %}
                 <div class="ct-promo__wrapper">
                   {% block content_left %}
                     <div class="ct-promo__inner">
